# controllers/Quo/QuoController.js
@@ -1,13 +1,13 @@
 const db = require("../../models");
-const { ServiceQUO } = db;
+const { ServiceQUO, ServiceRFQ } = db;
+const { Op } = require('sequelize');
 
 
 
 //generate service rfq
 exports.createServiceQuotation = async (req, res, next) => {
     try {
-        console.log("Service Quo")
-        console.log(req.body)
+        req.body.status = 1
         const { vendor_id, amount, po_id, remarks, service_rfq_id, status, created_by } = req.body
         let newServiceQuo = await ServiceQUO.create({ vendor_id, amount, po_id, remarks, status, service_rfq_id, created_by })
         if (newServiceQuo) {
@@ -30,12 +30,12 @@ exports.ServiceQuotationList = async (req, res, next) => {
     }
 }
 
-//service quotation list
+//service quotation by rfq id
 exports.ServiceQuotationListByServiceRFQid = async (req, res, next) => {
     try {
         let { service_rfq_id } = req.query;
         let serviceQuotation = await ServiceQUO.findAll({
-            where: { service_rfq_id, status: 0 }
+            where: { service_rfq_id, status: 1 }
         })
         if (serviceQuotation) {
             res.status(201).json(serviceQuotation)
@@ -45,49 +45,43 @@ exports.ServiceQuotationListByServiceRFQid = async (req, res, next) => {
     }
 }
 
-
 // confirm quotaiton
 exports.ServiceQuotationConfirmQuoid = async (req, res, next) => {
     try {
-        // console.log("*********************")
-        let { service_quo_id } = req.query;
-        console.log(service_quo_id)
+        let { service_quo_id, service_rfq_id } = req.query;
         let serviceQuotation = await ServiceQUO.update(
             { status: 2 },
             {
                 where: { service_quo_id }
             })
+        let serviceRfq = await ServiceRFQ.update(
+            { status: 2 },
+            {
+                where: { service_rfq_id }
+            })
         if (serviceQuotation) {
             console.log(serviceQuotation)
             res.status(201).json({ message: "Quotation Has Been confirm" })
         }
-
-
-        // let data = await ServiceQUO.findByPk(service_quo_id)
-        // console.log(data);
-        // res.status(201).json({ message: "Quotation Has Been confirm" })
     } catch (errr) {
         next(errr)
     }
 }
 
 
-
-
-
-//service quotation list
-exports.confirmQuotaion = async (req, res, next) => {
+//service confirmQuotaion list will be service po
+exports.getConfirmQuoList = async (req, res, next) => {
     try {
-        let { service_rfq_id } = req.query;
+
         let serviceQuotation = await ServiceQUO.findAll({
-            where: { status }
-        })
+            where: { status: 2 }
+        });
         if (serviceQuotation) {
             res.status(201).json(serviceQuotation)
         }
     } catch (errr) {
         next(errr)
-    }
+    } ``
 }
 
 
